rolan_1 Frontend Navbar (Logo, Dropdown, collapsed) mejorado_1

--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -1,18 +1,29 @@
 .mi-boton-rc {
-    background-color: #CCA831;
+    background-color:#CCA831;
     color: black;
 }
 .container-fluid {
   background-color: black;
 }
-.navbar {
-  background-color: black;
-  padding: 0px;
-}
+
 .nav-link {
   color: #CCA831;
 }
 .navbar-brand {
   color: #CCA831;
 }
+.nav-link.active {
+  color: #CCA831;
+}
+.custom-toggler .navbar-toggler {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0, 123, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+.custom-toggler {
+  background-color:#CCA831;
+}
+
+
+
+
+
 
