rolan_1 Frontend footer modificado

--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,40 +1,42 @@
 <footer class="">
 
   <div class="d-flex flex-column flex-sm-row justify-content-center justify-content-sm-between align-items-center bg-custom">
-    <p class="text-center text-sm-start">© 2024 Company, Inc. All rights reserved.</p>
+    <p class="text-center text-sm-start m-3 fs-6">© 2024 Company, Inc. All rights reserved.</p>
 
-    <ul class="list-unstyled d-flex justify-content-center justify-content-sm-end align-items-center">
+    <p class="m-3 d-none d-sm-block text-center fs-6 ">CONTACTO: 919 54 73 24 - 678456890</p>
+
+    <ul class="list-unstyled d-flex justify-content-center justify-content-sm-end align-items-center m-2 me-3">
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-whatsapp fs-2"></i>
+          <i class="bi bi-whatsapp fs-4"></i>
         </a>
       </li>
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-facebook fs-2"></i>
-        </a>
-      </li>
-
-      <li class="ms-3">
-        <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
-          <i class="bi bi-instagram fs-2"></i>
+          <i class="bi bi-facebook fs-4"></i>
         </a>
       </li>
 
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
-          <i class="bi bi-tiktok fs-2"></i>
+          <i class="bi bi-instagram fs-4"></i>
+        </a>
+      </li>
+
+      <li class="ms-3">
+        <a class="link-body-emphasis" href="https://www.treatwell.es/" target="_blank">
+          <i class="bi bi-tiktok fs-4"></i>
         </a>
       </li>
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-twitter-x fs-2"></i>
+          <i class="bi bi-twitter-x fs-4"></i>
         </a>
       </li>
 
       <li class="ms-3">
         <a class="link-body-emphasis" href="https://www.marcoaldany.com/" target="_blank">
-          <i class="bi bi-linkedin fs-2"></i>
+          <i class="bi bi-linkedin fs-4"></i>
         </a>
       </li>
     </ul>
