--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,135 +1,129 @@
-<main>
-  <div id="myCarousel" #carousel class="carousel slide mb-6" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active"
-        aria-current="true"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+<div class="d-flex justify-content-center">
+  @if (images) {
+  <ngb-carousel>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img [src]="images[0]" alt="Center first slide" class="carousel-image opacity-70 rounded" />
+      </div>
+      <div class="carousel-caption">
+        <h3>Nail & Hair Haven</h3>
+        <p>Belleza Integral en un Solo Lugar</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img [src]="images[1]" alt="Center second slide" class="carousel-image opacity-70 rounded" />
+      </div>
+      <div class="carousel-caption">
+        <h3>Pure Beauty Oasis</h3>
+        <p>Donde la Belleza y la Relajación se Encuentran</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img [src]="images[2]" alt="Center third slide" class="carousel-image opacity-70 rounded" />
+      </div>
+      <div class="carousel-caption">
+        <h3>Elegance & Nails Studio </h3>
+        <p> Cuida tu Belleza de la Cabeza a los Pies</p>
+      </div>
+    </ng-template>
+  </ngb-carousel>
+  }
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+<!-- Marketing messaging and featurettes
+  ================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+
+<div class="container marketing">
+
+  <!-- Three columns of text below the carousel -->
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="text-center">
+        <img src="/assets/img_home/Tratamientos2.png" class="d-block w-100" alt="Slide 3">
+        <h2 class="fw-bold ">Tratamientos</h2>
+        <p>Renueva tu look con nuestros cortes y tratamientos exclusivos.</p>
+        <p><a class="btn mi-boton-rc" href="#">Ver detalles »</a></p>
+      </div>
+    </div><!-- /.col-lg-4 -->
+
+    <div class="col-lg-4">
+      <div class="text-center">
+        <img src="/assets/img_home/Centros2.png" class="d-block w-100" alt="Slide 3">
+        <h2 class="fw-bold">Centros</h2>
+        <p>Experiencia única de belleza y bienestar bajo un mismo techo.</p>
+        <p><a class="btn mi-boton-rc" href="#">Ver detalles »</a></p>
+      </div>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <div class="text-center">
+        <img src="/assets/img_home/Categorias2.png" class="d-block w-100" alt="Slide 3">
+        <h2 class="fw-bold">Categorías</h2>
+        <p>Explora cortes, uñas y más en nuestra amplia gama de servicios</p>
+        <p><a class="btn mi-boton-rc" href="#">Ver detalles »</a></p>
+      </div>
+    </div><!-- /.col-lg-4 -->
+  </div><!-- /.row -->
+
+
+  <!-- START THE FEATURETTES -->
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading fw-normal lh-1">Tratamiento Corporal <span class="text-body-secondary">Renovación
+          Total.</span></h2>
+      <p class="lead">Sumérgete en un oasis de relajación y bienestar con nuestro tratamiento corporal diseñado
+        para rejuvenecer tu piel y revitalizar tu cuerpo.</p>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item">
-        <img src="/assets/img/Logo_cuadrado.png" class="img-fluid w-100 mx-auto" alt="Slide 1">
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item active">
-        <img src="/assets/img/img_company/pelu 4.jpg"class="img-fluid w-100 mx-auto" alt="Slide 2">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="/assets/img/Logo_cuadrado.png" class="img-fluid w-50 mx-auto" alt="Slide 2">
-        <div class="container">
-          <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-          </div>
-        </div>
-      </div>
+    <div class="col-md-5">
+      <img src="/assets/img_home/tratamiento.jpg" class="d-block w-100 rounded" alt="Slide 3">
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
 
+  <hr class="featurette-divider">
 
-  <!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-
-  <div class="container marketing">
-
-    <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="col-lg-4">
-        <img src="/assets/img/logo_bastbeauty.png" class="d-block w-100" alt="Slide 3">
-        <h2 class="fw-normal">Tratamientos</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
-          column.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img src="/assets/img/logo_bastbeauty.png" class="d-block w-100" alt="Slide 3">
-        <h2 class="fw-normal">Centros</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.
-        </p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img src="/assets/img/logo_bastbeauty.png" class="d-block w-100" alt="Slide 3">
-        <h2 class="fw-normal">Categorías</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-
-    <!-- START THE FEATURETTES -->
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll
-            blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.
-        </p>
-      </div>
-      <div class="col-md-5">
-        <img src="/assets/img/img_company/pelu 5.jpg" class="d-block w-100" alt="Slide 3">
-      </div>
+  <div class="row featurette">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading fw-normal lh-1">Corte de Cabello <span class="text-body-secondary">Renovación
+        Total.</span></h2>
+      <p class="lead">Confía en nuestros expertos estilistas para crear un
+        corte de cabello a la última moda que realce tu belleza natural y refleje tu personalidad.</p>
     </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for
-            yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
-          layout would work with some actual real-world content in place.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img src="/assets/img/img_company/pelu 6.jpg" class="d-block w-100" alt="Slide 3">
-      </div>
+    <div class="col-md-5 order-md-1">
+      <img src="/assets/img_home/barberia.jpg" class="d-block w-100 rounded" alt="Slide 3">
     </div>
+  </div>
 
-    <hr class="featurette-divider">
+  <hr class="featurette-divider">
 
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span
-            class="text-body-secondary">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really
-          intended to be actually read, simply here to give you a better view of what this would look like with some
-          actual content. Your content.</p>
-      </div>
-      <div class="col-md-5">
-        <img src="/assets/img/img_company/pelu 3.jpg" class="d-block w-100" alt="Slide 3">
-      </div>
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading fw-normal lh-1">Manicura <span class="text-body-secondary">Renovación
+        Total.</span></h2>
+      <p class="lead">Deleita tus sentidos con un pintado de uñas moderno y elegante, donde podrás elegir
+        entre una amplia gama de colores y diseños para expresar tu estilo único.</p>
     </div>
+    <div class="col-md-5">
+      <img src="/assets/img_home/manicura.jpg" class="d-block w-100 rounded" alt="Slide 3">
+    </div>
+  </div>
 
-    <hr class="featurette-divider">
+  <hr class="featurette-divider">
 
-    <!-- /END THE FEATURETTES -->
+  <!-- /END THE FEATURETTES -->
 
-  </div><!-- /.container -->
-  
-
-</main>
+</div><!-- /.container -->
