rolan_1 Frontend botones user-list y form finalizado.

--- a/frontend/src/app/user-list/user-list.component.html
+++ b/frontend/src/app/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 
 <div class="container px-4 py-5" id="custom-cards">
-    <h2 class="w-100 btn mi-boton-personalizado btn-lg fs-4">Lista de usuarios/as registrados <i class="bi bi-people-fill"></i>
+    <h2 class="text-center">Lista de usuarios/as registrados <i class="bi bi-people-fill"></i>
     </h2>
   
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
@@ -12,12 +12,17 @@
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
               <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{user.fullName}}</h3>
               <ul class="d-flex list-unstyled mt-auto">
+                
+                <div _ngcontent-shq-c54="" class="exam-card-item_bg" style="background-color: rgb(241, 224, 90);">
+
+
+                </div>
                 <li class="me-auto">
-                  <button class="btn btn-primary btn-sm fs-5" [routerLink]="['/users', user.id, 'detail']">
+                  <button class="btn btn_user2 btn-sm fs-6 me-2" [routerLink]="['/users', user.id, 'detail']">
                     Ver
                   </button>
 
-                  <button class="btn btn-primary btn-sm fs-5" [routerLink]="['/users', user.id, 'update']">
+                  <button class="btn btn_user2 btn-sm fs-6" [routerLink]="['/users', user.id, 'update']">
                     Editar
                   </button>
 
