--- a/frontend/src/app/user-form/user-form.component.css
+++ b/frontend/src/app/user-form/user-form.component.css
@@ -1,5 +1,9 @@
-.mi-boton-personalizado {
-    background-color: rgb(140, 0, 255); /* Color de fondo violeta */
-    color: #ffffff; /* Color del texto blanco */
-   
+.btn_user3 {
+    color: black; /* Cambia #FF0000 por tu color personalizado */
+    border-color: #CCA831; /* Usa el mismo color para el borde */
+    border-radius: 30px;
+}
+.btn_user3:hover {
+    color: #000000; /* Cambia el color del texto al pasar el ratón por encima, por ejemplo, a blanco */
+    background-color: #CCA831; /* Color de fondo al pasar el ratón por encima */
 }
