--- a/frontend/src/app/user-form/user-form.component.html
+++ b/frontend/src/app/user-form/user-form.component.html
@@ -76,20 +76,20 @@
                 </div>
 
                 <div class="d-grid gap-2">
-                    <button class="btn mi-boton-personalizado mx-5 mb-2" type="submit">Enviar</button>
-                    <button class="btn mi-boton-personalizado mx-5 mb-2" type="button"
+                    <button class="btn btn_user3 mx-5 mb-2 fs-6" type="submit">Enviar</button>
+                    <button class="btn btn_user3 mx-5 mb-2 fs-6" type="button"
                         [routerLink]="['/users']">Cancelar</button>
                 </div>
             </form>
         </div>
         <div class="col-lg-4">
             @if(photoPreview) {
-            <h3 class="my-5">Previsualización de foto</h3>
-            <img class="img-fluid" [src]="photoPreview">
+            <h3 class="text-center my-5">Previsualización de foto</h3>
+            <img class="img-fluid rounded" [src]="photoPreview">
             }
             @if (!photoPreview && user?.photoUrl) {
                 <h3 class="my-5">Previsualización de foto</h3>
-                <img class="img-fluid" [src]="'http://localhost:3000/uploads/' + user?.photoUrl">
+                <img class="img-fluid rounded" [src]="'http://localhost:3000/uploads/' + user?.photoUrl">
               }
         </div>
     </div>
