--- a/frontend/src/app/company-form/company-form.component.html
+++ b/frontend/src/app/company-form/company-form.component.html
@@ -1,55 +1,50 @@
-
 <div class="container">
   <div class="row">
-    <div class="col-lg-8">
+    <div class="col-lg-7">
 
-       <h1 class="my-5">Actualizar/Editar o Crear Centro</h1>
+      <h1 class="my-5 text-center">Crear o Actualizar Centro</h1>
 
       <form [formGroup]="companyForm" (ngSubmit)="save()">
 
-      <div class="form-floating mb-3">
+        <div class="form-floating mb-3">
           <input type="text" class="form-control" id="id" formControlName="id" readonly>
           <label for="id">Id</label>
         </div>
 
-          <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="name" formControlName="name"
-            placeholder="">
-            <label for="name">Nombre Centro </label>
-          </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="name" formControlName="name" placeholder="">
+          <label for="name">Nombre Centro </label>
+        </div>
 
-          <input type="hidden" formControlName="photoUrl">
+        <input type="hidden" formControlName="photoUrl">
 
-          <div class="input-group mb-3">
-            <label class="input-group-text" for="photoUrl">Subir foto</label>
-            <input type="file" class="form-control" id="photoUrl" (change)="onFileChange($event)">
-          </div>
-
-         <div class="form-floating mb-3">
-         <input type="text" class="form-control" id="cif" formControlName="cif"
-         placeholder="Texto largo" rows="4" cols="50">
-        <label for="title">Cif</label>
+        <div class="input-group mb-3">
+          <label class="input-group-text" for="photoUrl">Subir foto</label>
+          <input type="file" class="form-control" id="photoUrl" (change)="onFileChange($event)">
         </div>
 
         <div class="form-floating mb-3">
-       <input type="text" class="form-control" id="street" formControlName="street"
-       placeholder="">
-       <label for="title">Dirección</label>
-       </div>
+          <input type="text" class="form-control" id="cif" formControlName="cif" placeholder="Texto largo" rows="4"
+            cols="50">
+          <label for="title">Cif</label>
+        </div>
 
-       <div class="form-floating mb-3">
-       <input type="text" class="form-control" id="city" formControlName="city"
-        placeholder="">
-        <label for="title">Ciudad</label>
-       </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="street" formControlName="street" placeholder="">
+          <label for="title">Dirección</label>
+        </div>
 
-       <div class="form-floating mb-3">
-       <input type="text" class="form-control" id="postalCode" formControlName="postalCode"
-       placeholder="">
-       <label for="title">Código Postal</label>
-       </div>
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="city" formControlName="city" placeholder="">
+          <label for="title">Ciudad</label>
+        </div>
 
-       <!--
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="postalCode" formControlName="postalCode" placeholder="">
+          <label for="title">Código Postal</label>
+        </div>
+
+        <!--
       <div class="form-floating mb-3">
       <input type="text" class="form-control" id="treatment" formControlName="treatment"
       placeholder="">
@@ -57,7 +52,7 @@
      </div>
      -->
 
-     <!--
+        <!--
       <div class="form-floating mb-3">
       <input type="text" class="form-control" id="active" formControlName="active"
        placeholder="">
@@ -65,27 +60,28 @@
        </div>
        -->
 
-     <button class="w-100 btn btn-primary btn-lg" type="submit">Guardar</button>
+        <div class="d-grid gap-2">
+          <button class="btn btn_company3 mx-5 mb-2 fs-6" type="submit">Enviar</button>
+          <button class="btn btn_company3 mx-5 mb-2 fs-6" type="button"
+          [routerLink]="['/companies']">Cancelar</button>
+
+        </div>
 
       </form>
 
     </div>
-  <div class="col-lg-4">
+    <div class="col-lg-5">
 
-  @if(photoPreview) {
-    <h3 class="my-5">Previsualización de foto</h3>
-    <img class="rounded mx-auto d-block" [src]="photoPreview"
-    style= "max-width: 500px;">
+      @if(photoPreview) {
+      <h3 class="my-5 text-center">Previsualización de foto</h3>
+      <img class="rounded mx-auto d-block" [src]="photoPreview" style="max-width: 500px;">
 
 
-  }
-  @if (!photoPreview && category?.photoUrl) {
-    <h3 class="my-5">Previsualización de foto</h3>
-    <img class="img-fluid" [src]="'http://localhost:3000/uploads/' + category?.photoUrl">
-  }
+      }
+      @if (!photoPreview && category?.photoUrl) {
+      <h3 class="my-5 text-center">Previsualización de foto</h3>
+      <img class="img-fluid" [src]="'http://localhost:3000/uploads/' + category?.photoUrl">
+      }
+    </div>
+  </div>
 </div>
-</div>
-</div>
-
-
-
