--- a/frontend/src/app/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.html
@@ -131,7 +131,12 @@
           @for (comment of comments; track comment.id) {
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
+                @if(comment.user?.photoUrl) {
+                  <img class="bd-placeholder-img" style="max-width:100px;"
+                  [src]="'http://localhost:3000/uploads/' + comment.user?.photoUrl">
+                } @else {
                 <img class="bd-placeholder-img" src="https://placehold.co/100">
+                }
                 <div class="col-lg-8">
                   <h6 class="mb-0">
                     <ngb-rating [(rate)]="comment.rating" [readonly]="true" [max]="5">
