--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,9 +1,8 @@
-<div class="d-flex justify-content-center">
   @if (images) {
   <ngb-carousel>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img [src]="images[0]" alt="Center first slide" class="carousel-image opacity-70 rounded" />
+        <img [src]="images[0]" alt="Center first slide" class="carousel-image opacity-70 rounded mh-100" style="width: 100%; height: 80vh"/>
       </div>
       <div class="carousel-caption">
         <h3>Nail & Hair Haven</h3>
@@ -12,7 +11,7 @@
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img [src]="images[1]" alt="Center second slide" class="carousel-image opacity-70 rounded" />
+        <img [src]="images[1]" alt="Center second slide" class="carousel-image opacity-70 rounded mh-100" style="width: 100%; height: 80vh"/>
       </div>
       <div class="carousel-caption">
         <h3>Pure Beauty Oasis</h3>
@@ -21,7 +20,7 @@
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img [src]="images[2]" alt="Center third slide" class="carousel-image opacity-70 rounded" />
+        <img [src]="images[2]" alt="Center third slide" class="carousel-image opacity-70 rounded mh-100" style="width: 100%; height: 80vh"/>
       </div>
       <div class="carousel-caption">
         <h3>Elegance & Nails Studio </h3>
@@ -30,16 +29,6 @@
     </ng-template>
   </ngb-carousel>
   }
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 
 
 <!-- Marketing messaging and featurettes
