--- a/frontend/src/app/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.html
@@ -144,7 +144,7 @@
                         <i class="bi-star{{ fill === 100 ? '-fill' : '' }} fs-3" style="color:#ffb900;"></i>
                       </ng-template>
                     </ngb-rating>
-                    {{comment.rating | date:'dd/MM/yyyy'}}
+                    {{comment.user?.fullName}}
                   </h6>
                   <small class="text-body-secondary">{{comment.opinion}}</small>
                 </div>
