--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -21,40 +21,41 @@
             @if(isAdmin) {
               <a ngbDropdownItem routerLink="/treatments/create" (click)="$event.preventDefault()">Crear tratamiento</a>
             }
-            <!--<a ngbDropdownItem routerLink="/treatments/create" (click)="$event.preventDefault()">Crear tratamiento</a>-->
           </div>
         </li>
 
         <li class="nav-item" ngbDropdown display="dynamic" placement="bottom-end">
-					<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown3" role="button"> Categorías </a>
+					<a class="nav-link" tabindex="0" ngbDropdownToggle (click)="setActive('categorías')"
+            [class.active]="activeLink === 'categorías'"> Categorías </a>
 					<div ngbDropdownMenu aria-labelledby="navbarDropdown3" class="dropdown-menu">
 						<a ngbDropdownItem routerLink="/categories" (click)="$event.preventDefault()">Listado</a>
 						@if(isAdmin) {
               <a ngbDropdownItem routerLink="/categories/create" (click)="$event.preventDefault()">Crear categoría</a>
             }
-            <!--<a ngbDropdownItem routerLink="/categories/create" (click)="$event.preventDefault()">Crear categoría</a>-->
+            
 					</div>
 				</li>
 
 
         <li class="nav-item" ngbDropdown display="dynamic" placement="bottom-end">
-					<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown3" role="button"> Centros de belleza </a>
+					<a class="nav-link" tabindex="0" ngbDropdownToggle (click)="setActive('tratamientos')"
+            [class.active]="activeLink === 'tratamientos'"> Centros de belleza </a>
 					<div ngbDropdownMenu aria-labelledby="navbarDropdown3" class="dropdown-menu">
 						<a ngbDropdownItem routerLink="/companies" (click)="$event.preventDefault()">Listado</a>
 						@if(isAdmin) {
-              <a ngbDropdownItem routerLink="/editorials/create" (click)="$event.preventDefault()">Crear editorial</a>
+              <a ngbDropdownItem routerLink="/companies/create" (click)="$event.preventDefault()">Crear centro</a>
             }
-            <!--<a ngbDropdownItem routerLink="/companies/create" (click)="$event.preventDefault()">Crear centro de belleza</a>-->
 					</div>
 				</li>
 
         @if (isLoggedIn) {
           <li class="nav-item" ngbDropdown display="dynamic" placement="bottom-end">
-            <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown3" role="button"> Reservas </a>
+            <a class="nav-link" tabindex="0" ngbDropdownToggle (click)="setActive('reservas')"
+            [class.active]="activeLink === 'reservas'"> Reservas </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown3" class="dropdown-menu">
-              <a ngbDropdownItem routerLink="/reservations" (click)="$event.preventDefault()">Listado reservas</a>
+              <a ngbDropdownItem routerLink="/booking" (click)="$event.preventDefault()">Listado</a>
               @if (isAdmin) {
-              <a ngbDropdownItem routerLink="/reservations/create" (click)="$event.preventDefault()">Crear reserva</a>
+              <a ngbDropdownItem routerLink="/booking/create" (click)="$event.preventDefault()">Crear reserva</a>
               }
             </div>
           </li>
@@ -73,9 +74,10 @@
       <ul class="navbar-nav ms-auto fs-5">
         @if(isAdmin) {
         <li class="nav-item" ngbDropdown>
-					<a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown2" role="button"> Usuarios </a>
+					<a class="nav-link" tabindex="0" ngbDropdownToggle (click)="setActive('usuarios')"
+            [class.active]="activeLink === 'usuarios'"> Usuarios </a>
 					<div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-end">
-						<a ngbDropdownItem [routerLink]="['/users']" (click)="$event.preventDefault()">Lista de usuarios</a>
+						<a ngbDropdownItem [routerLink]="['/users']" (click)="$event.preventDefault()">Listado</a>
 						<a ngbDropdownItem [routerLink]="['/users/:id/create']" (click)="$event.preventDefault()">Crear Usuario</a>
 					</div>
 				</li>
@@ -89,13 +91,13 @@
         }
         @if(isLoggedIn) {
           <li class="nav-item">
-            <button type="button" class="btn btn-warning me-3 mb-2" (click)="logout()">
+            <button type="button" class="btn mi-boton-rc me-3 mt-1" (click)="logout()">
               Logout <i class="bi bi-box-arrow-right ms-2"></i>
             </button>
           </li>
         } @else {
         <li class="nav-item">
-          <button type="button" class="btn mi-boton-rc me-3 mb-2" routerLink="/login">
+          <button type="button" class="btn mi-boton-rc me-3 mt-1" routerLink="/login">
             Login <i class="bi bi-box-arrow-in-right ms-2"></i>
           </button>
         </li>
