--- a/frontend/src/app/category-list/category-list.component.html
+++ b/frontend/src/app/category-list/category-list.component.html
@@ -27,7 +27,7 @@
 
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" [routerLink]="['/categories', category.id, 'detail']">Ver</button>
+                    <button type="button" class="btn btn-category2" [routerLink]="['/categories', category.id, 'detail']">Ver</button>
 
                   </div>
 
@@ -37,7 +37,7 @@
             </div>
           </div>
       }
-      <button class="btn btn-outline-info"
+      <button class="btn btn-category"
       routerLink="/categories/create">Crear Categoria</button>
     </div>
   </div>
