--- a/frontend/src/app/features/booking/booking-list/booking-list.component.html
+++ b/frontend/src/app/features/booking/booking-list/booking-list.component.html
@@ -11,7 +11,9 @@
             <div class="card mb-3 text-emphasis border-warning border-1 shadow">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="/assets/img/uñas.png" class="card-img" alt="Placeholder">
+                    @if(booking.treatment?.image) {
+                    <img class="card-img left" width="auto" height="180" [src]="'http://localhost:3000/uploads/' + booking.treatment?.image" alt="Random first slide" />
+                  }
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
