--- a/frontend/src/app/layout/navbar/navbar.component.css
+++ b/frontend/src/app/layout/navbar/navbar.component.css
@@ -1,6 +1,11 @@
-.mi-boton-rc {
+.btn_nav{
     background-color:#CCA831;
     color: black;
+}
+.btn_nav2 {
+  background-color:white;
+  color: black;
+  border-color: #CCA831;
 }
 .container-fluid {
   background-color: black;
@@ -15,9 +20,9 @@
 .nav-link.active {
   color: #CCA831;
 }
-.custom-toggler .navbar-toggler {
+/*.custom-toggler .navbar-toggler {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0, 123, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-}
+} */
 .custom-toggler {
   background-color:#CCA831;
 }
