--- a/frontend/src/app/features/category/category-list/category-list.component.css
+++ b/frontend/src/app/features/category/category-list/category-list.component.css
@@ -1,7 +1,29 @@
-img {
+/* img {
   height: 500px;
   object-fit: scale-down;
+} */
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+/* .card-body {
+  background-color: white;
+  padding: 0px;
+}
+.container {
+  background-color: whitesmoke;
+  padding: 0px;
+  margin-top: 0px;
+} */
 
 .btn-category2{
   background-color: #CCA831; /* Color de fondo violeta */
