boolean de administrador en category list t deatail

--- a/frontend/src/app/features/category/category-list/category-list.component.html
+++ b/frontend/src/app/features/category/category-list/category-list.component.html
@@ -37,8 +37,10 @@
             </div>
           </div>
       }
+      @if(isAdmin) {
       <button class="btn btn-category"
       routerLink="/categories/create">Crear Categoria</button>
+    }
     </div>
   </div>
 
