--- a/frontend/src/app/features/category/category-detail/category-detail.component.html
+++ b/frontend/src/app/features/category/category-detail/category-detail.component.html
@@ -22,7 +22,9 @@
 
            <p class="lead mb-4">{{category.name}} tenemos los mejores especialistas </p>
            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            @if(isAdmin) {
               <button type="button" class="btn btn-category btn-lg px-4 gap-3" [routerLink]="updateUrl"> Modificar </button>
+            }
 <!--               <button type="button" class="btn btn-category btn-lg px-4"(click)="delete(category)" > Borrar Categoría </button>
  -->
 
