Diana1 configuracion back ground de company detail y colores de botones

--- a/frontend/src/app/features/user/user-list/user-list.component.css
+++ b/frontend/src/app/features/user/user-list/user-list.component.css
@@ -1,21 +1,29 @@
 
 .btn_user2{
-    background-color: #CCA831; /* Color de fondo violeta */
-    color: #000000; /* Color del texto blanco */
-    /* Otros estilos según sea necesario */
-    transition: opacity 0.3s ease; /* Transición de opacidad durante 0.3 segundos */
+  background-color: #CCA831; /* Color de fondo violeta */
+  color: #000000; /* Color del texto blanco */
+  /* Otros estilos según sea necesario */
+  transition: opacity 0.3s ease; /* Transición de opacidad durante 0.3 segundos */
 }
 
 .btn_user2:hover {
-    opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
+  opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
 }
 .btn_user2:active {
-    opacity: 0.5; /* Cambia la opacidad al hacer clic */
+  opacity: 0.5; /* Cambia la opacidad al hacer clic */
+}
+.card-cover {
+  background-position: center top 20%;
+  background-size: cover;
+
+}
+.card-cover:hover {
+  opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
 }
 .card-cover {
     background-position: center top 20%;
     background-size: cover;
-    
+
 }
 .card-cover:hover {
     opacity: 0.8; /* Cambia la opacidad al pasar el ratón por encima */
