--- a/frontend/src/app/features/company/company-detail/company-detail.component.html
+++ b/frontend/src/app/features/company/company-detail/company-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 card mb-3 bg-success-subtle text-primary-emphasis">
+<div class="container mt-5 card mb-3 bg-company2">
     <div class="row">
     <div class="col-4 text-center">
 
@@ -7,7 +7,7 @@
         <img class="img-fluid" [src]="'http://localhost:3000/uploads/' + company.photoUrl" alt="Foto company">
 
         <div>
-          <button class="btn btn-danger my-2" (click)="deleteCompany()">
+          <button class="btn btn_company3 my-2" (click)="deleteCompany()">
             <i class="bi bi-trash"></i> Borrar
           </button>
         </div>
@@ -45,7 +45,7 @@
               <i class= "bi bi-buildings me-3 fs-2"></i>
               <div>
                 <h3 class="mb-0 fs-4 text-body-emphasis">
-                  ciudad
+                  Ciudad
                 </h3>
                 <p>{{ company.city }}</p>
               </div>
