--- a/frontend/src/app/features/company/company-list/company-list.component.html
+++ b/frontend/src/app/features/company/company-list/company-list.component.html
@@ -4,8 +4,6 @@
 
       <h1 class="mt-5">Listado de establecimientos <i class="bi bi-shop"></i></h1>
 
-      <button class="btn btn-primary"
-      routerLink="/companies/create">Crear establecimiento</button>
 
       <table class="table table-striped mt-5">
         <thead>
@@ -16,19 +14,19 @@
             <th scope="col">Ciudad</th>
             <th scope="col">Código postal</th>
             <th scope="col">Valoración</th>
-            <th scope="col">Tratamientos</th>
-            <th scope="col">Acciones</th>
+            <th scope="col"></th>
+            <th class="text-center" scope="col">Acciones</th>
           </tr>
         </thead>
         <tbody>
           @for(company of companies; track company.id) {
           <tr>
-            <td>{{company.id}}</td>
+            <td class="text-center">{{company.id}}</td>
             <td>{{company.name}}</td>
             <td>{{company.street}}</td>
-            <td>{{company.city}}</td>
-            <td>{{company.postalCode}}</td>
-            <td>{{company.values}}</td>
+            <td class="text-center">{{company.city}}</td>
+            <td class="text-center">{{company.postalCode}}</td>
+            <td class="text-center">{{company.values}}</td>
 
             <!-- Asociación Many To One -->
             <td>
@@ -40,11 +38,11 @@
             </td>
 
             <td>
-              <button class="btn btn-success me-2" [routerLink]="['/companies', company.id, 'detail']">
+              <button class="btn btn_company me-2" [routerLink]="['/companies', company.id, 'detail']">
                 <i class="bi bi-eye"></i>
                 Ver detalle
               </button>
-              <button class="btn btn-success me-2" [routerLink]="['/companies', company.id, 'update']">
+              <button class="btn btn_company me-2" [routerLink]="['/companies', company.id, 'update']">
                 <i class="bi bi-pencil"></i>
                 Editar
               </button>
